Fixed spacing issue on update page.

--- a/public/scss/update/update.scss
+++ b/public/scss/update/update.scss
@@ -69,12 +69,3 @@ body {
   text-decoration: none;
   transition: all .15s ease;
 }
-
-/* Navigation Bar Change. */
-@media screen and (max-width: 767px) {
-  
-  #update-info-form {
-    margin-top: 10px;
-  }
-
-}
